# re-tmp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  ONBOARDING.md  README.md  STATUS.md  index.md  main.py  pyproject.toml
.github/workflows/: slurm-webhook.yml  validate.yml
configs/: config.yaml  site.yaml.example
configs/data/: cifar10.yaml  default.yaml
configs/experiment/: EXP001.yaml
configs/model/: default.yaml
configs/trainer/: default.yaml
docs/: fast-approval-gates.md  plan-review-workflow.md  research-automation-architecture.md  run-based-task-execution.md  testing-the-research-system.md
docs/agent-rules/: core-rules.md  domain-terms.md  git-rules.md  validation-rules.md  workflow.md
experiments/EXP001/: README.md
literature/: README.md  index.md  papers.yaml  related-work.md
memory/: DECISIONS.md  NOW.md  log.md
scripts/: check_creds.py  check_servers.py  check_task_quality.py  create_execution_tasks.py  create_experiment.sh  fetch_paper.py  lint_agent_docs.py  lit_index.py  orchestrate.py  plan_gate.py  plan_utils.py  review_gate.py  run_task.py  setup.py  state_utils.py  submit.py  update_graph.py  validate.py  validate_state.py
src/: config_schema.py  train.py
state/: README.md  claims.yaml  plans.yaml  tasks.yaml  verdicts.yaml
templates/: AGENT_DOC_TEMPLATE.md  DECISION.md  EXPERIMENT_README.md  PLAN_MODE.md  PLAN_REVIEW.yaml  SESSION_CAPSULE.yaml  SESSION_LOG.md  STATE_CLAIM.yaml  STATE_PLAN.yaml  STATE_TASK.yaml  STATUS_HISTORY.md  VERDICT.yaml  reference_job.slurm
tests/: test_mock_research_flow.py
(+23 files in other folders)
